CU-86b14j4e0_check-code-security-reports-at-GitHub-for-all-repos (#200)
* CU-86b14j4e0_check-code-security-reports-at-GitHub-for-all-repos

* changelog

---------

Co-authored-by: zubri <sebastian@prowidesoftware.com>